fix(header): Make dark mode toggle smaller

--- a/src/components/core/Header.scss
+++ b/src/components/core/Header.scss
@@ -37,3 +37,7 @@
     width: 60%;
   }
 }
+
+.dark-mode-toggle {
+  margin-top: 5px;
+}
